chronicle-example/src/snapshots/chronicle__test__agent_can_be_created.snap
---
source: cli/src/main.rs
assertion_line: 686
expression: create
---
[data.agent]
context = 'http://blockchaintp.com/chronicle/ns#agent:bobross'
