chronicle-example/src/snapshots/chronicle__test__primary_source-2.snap
---
source: cli/src/main.rs
assertion_line: 586
expression: derived
---
[data.entityById]
id = 'http://blockchaintp.com/chronicle/ns#entity:generated'
name = 'generated'

[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.hadPrimarySource]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
