chronicle-example/src/snapshots/chronicle__test__query_agents_by_cursor-3.snap
---
source: cli/src/main.rs
assertion_line: 785
expression: out_of_bound_cursor
---
{
  "data": {
    "agentsByType": {
      "pageInfo": {
        "hasPreviousPage": true,
        "hasNextPage": false,
        "startCursor": "91",
        "endCursor": "99"
      },
      "edges": [
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross91",
            "name": "bobross91"
          },
          "cursor": "91"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross92",
            "name": "bobross92"
          },
          "cursor": "92"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross93",
            "name": "bobross93"
          },
          "cursor": "93"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross94",
            "name": "bobross94"
          },
          "cursor": "94"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross95",
            "name": "bobross95"
          },
          "cursor": "95"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross96",
            "name": "bobross96"
          },
          "cursor": "96"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross97",
            "name": "bobross97"
          },
          "cursor": "97"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross98",
            "name": "bobross98"
          },
          "cursor": "98"
        },
        {
          "node": {
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross99",
            "name": "bobross99"
          },
          "cursor": "99"
        }
      ]
    }
  }
}
