chronicle-example/src/snapshots/chronicle__test__revision.snap
---
source: cli/src/main.rs
assertion_line: 609
expression: created
---
[data.wasRevisionOf]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
